# AutoAPI

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/routes/: apis.py
app/routes/endpoints/: dynamic_router.py  resource_router.py
app/routes/services/: records_service.py  resource_service.py
app/utils/: config.py
routes/: apis.py
routes/endpoints/: dynamic_router.py  resource_router.py
routes/services/: __init__.py  records_service.py  resource_service.py
